--- a/Typescript/FPTalk/package.json
+++ b/Typescript/FPTalk/package.json
@@ -3,6 +3,10 @@
     "imperative": "ts-node src/Imperative/Game",
     "functional": "ts-node src/Functional/Game"
   },
+  "dependencies": {
+    "ts-node": "^8.6.2",
+    "typescript": "^3.7.3"
+  },
   "devDependencies": {
     "@types/node": "^13.5.0"
   }
